<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/bg">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@drawable/title_bar_bg" android:gravity="center_vertical"
		android:id="@+id/title">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="18.0dip"
			android:textSize="19sp" android:id="@+id/title_bar_title"
			android:text="@string/loginnamecard" android:textColor="@android:color/white"></TextView>
	</LinearLayout>

	<RelativeLayout android:layout_width="fill_parent"
		android:gravity="center" android:layout_height="fill_parent"
		android:layout_below="@id/title">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_marginLeft="20sp" android:layout_marginRight="20sp"
			android:layout_height="wrap_content" android:background="@drawable/login_bg"
			android:orientation="vertical">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:layout_marginTop="0dip">
				<TextView android:layout_width="wrap_content"
					android:gravity="center" android:layout_height="wrap_content"
					android:layout_alignParentLeft="true" android:textSize="19sp"
					android:layout_weight="1" android:text="@string/loginnamecard"
					android:textColor="@android:color/white"></TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_margin="20dip">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<TextView android:layout_width="45dip"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true" android:textSize="19sp"
						android:layout_weight="1" android:text="@string/loginnamecard_BindStr_txt"
						android:textColor="@android:color/white"></TextView>
					<EditText android:id="@+id/loginnamecard_bindStr"
						android:layout_alignParentRight="true"
						android:hint="@string/loginnamecard_BindStr_txt_hint"
						android:layout_height="40dip" android:background="@drawable/edit_login_bg" android:layout_width="170dip"/>
				</LinearLayout>

				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_marginTop="20dip">
					<TextView android:layout_width="45dip"
						android:layout_height="wrap_content"
						android:layout_alignParentLeft="true" android:textSize="19sp"
						android:layout_weight="1" android:text="@string/loginnamecard_Password_txt"
						android:textColor="@android:color/white"></TextView>
					<EditText android:id="@+id/loginnamecard_password"
						android:layout_alignParentRight="true"
						android:hint="@string/loginnamecard_Password_txt_hint"
						android:layout_height="40dip" android:background="@drawable/edit_login_bg" android:password="true" android:layout_width="170dip"/>
				</LinearLayout>


				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_marginTop="30dip">
					<Button android:id="@+id/button1" style="@style/normal_btn"
						android:text="@string/loginnamecard_login" android:layout_width="wrap_content"
						android:layout_height="40dip" android:layout_weight="1"
						android:layout_marginRight="30dip" android:onClick="login" />
					<Button android:id="@+id/button2" android:text="@string/loginnamecard_cancel"
						style="@style/normal_btn" android:layout_width="wrap_content"
						android:layout_height="40dip" android:layout_weight="1"
						android:layout_marginLeft="30dip" android:onClick="cancel" />

				</LinearLayout>
			</LinearLayout>


		</LinearLayout>

	</RelativeLayout>
</RelativeLayout>

