<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dip">

	<LinearLayout android:layout_width="fill_parent"
	android:gravity="center_vertical" android:padding="0dip"
	android:layout_height="wrap_content" android:orientation="horizontal">
	
	<LinearLayout android:layout_width="80dip" android:layout_height="80dip" 
		android:background="@drawable/hi_mycard_bg_item" android:padding="5dip">
		<ImageView android:layout_width="72dip"
		android:layout_height="72dip"  android:id="@+id/head"
		android:textSize="19sp"  
		android:text="@string/loginnamecard_BindStr_txt" android:textColor="@android:color/white"
		android:background="@drawable/head"  />
	</LinearLayout>
	

	<LinearLayout android:layout_width="fill_parent" android:layout_weight="6"  android:layout_marginLeft="15dip"
		android:padding="0dip"
		android:background="@drawable/hi_mycard_bg_item"
		android:gravity="center_vertical" android:id="@+id/bottom_bar" android:layout_height="wrap_content">
		<TextView android:textSize="15sp" android:textColor="@android:color/black"
			android:layout_height="wrap_content"  android:layout_margin="5dip"
			android:id="@+id/my_cardinfo_name" android:layout_width="180dip"/>
	</LinearLayout>
			
		
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10dip"
		android:padding="0dip"
		android:background="@drawable/hi_mycard_bg_item" android:gravity="center_vertical"
		android:id="@+id/bottom_bar" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_marginLeft="15dip" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:textColor="@android:color/black"
			android:textSize="15sp" android:text="@string/cardinfo_duty" />
		<TextView android:textSize="15sp" android:textColor="@android:color/black"
			android:layout_marginLeft="10dip" android:id="@+id/my_cardinfo_duty"
			android:layout_marginRight="10dip"
			android:layout_height="wrap_content" android:layout_marginBottom="4dip" android:layout_marginTop="4dip" android:layout_width="227dip"/>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10dip"
		android:padding="0dip"
		android:background="@drawable/hi_mycard_bg_item" android:gravity="center_vertical"
		android:id="@+id/bottom_bar" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_marginLeft="15dip" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:textColor="@android:color/black"
			android:textSize="15sp"
			android:text="@string/cardinfo_mobile" />
		<TextView android:textSize="15sp" android:layout_alignParentRight="true"
			android:layout_height="20dip" 
			android:id="@+id/my_cardinfo_mobile" 
			android:layout_width="200dip" android:layout_marginRight="10dip" android:textColor="@android:color/black"
			android:layout_marginLeft="10dip" android:layout_marginBottom="4dip" android:layout_marginTop="4dip"/>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10dip"
		android:padding="0dip"
		android:background="@drawable/hi_mycard_bg_item" android:gravity="center_vertical"
		android:id="@+id/bottom_bar" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_marginLeft="15dip" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:textColor="@android:color/black"
			android:textSize="15sp"
			android:text="@string/cardinfo_email" />
		<TextView android:textSize="15sp" android:layout_alignParentRight="true" android:textColor="@android:color/black"
			android:id="@+id/my_cardinfo_email" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_width="200dip" android:layout_height="wrap_content" android:layout_marginBottom="4dip" android:layout_marginTop="4dip"/>
	</LinearLayout>

<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10dip"
		android:padding="0dip"
		android:background="@drawable/hi_mycard_bg_item" android:gravity="center_vertical"
		android:id="@+id/bottom_bar" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_marginLeft="15dip" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:textColor="@android:color/black"
			android:textSize="15sp"
			android:text="@string/cardinfo_officeTel" />
		<TextView android:textSize="15sp" android:layout_alignParentRight="true" android:textColor="@android:color/black"
			android:layout_marginRight="15dip" android:layout_width="200dip" android:layout_marginLeft="10dip" android:layout_height="wrap_content" android:id="@+id/my_cardinfo_officeTel"/>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10dip"
		android:padding="0dip"
		android:background="@drawable/hi_mycard_bg_item" android:gravity="center_vertical"
		android:id="@+id/bottom_bar" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_marginLeft="15dip" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:textColor="@android:color/black"
			android:textSize="15sp"
			android:text="@string/cardinfo_officeFax" />
		<TextView android:textSize="15sp" android:layout_alignParentRight="true" android:textColor="@android:color/black"
			android:layout_marginRight="15dip" android:id="@+id/my_cardinfo_officeFax" android:layout_width="200dip" android:layout_marginLeft="10dip" android:layout_height="wrap_content" android:layout_marginBottom="4dip" android:layout_marginTop="4dip"/>
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10dip"
		android:padding="0dip"
		android:background="@drawable/hi_mycard_bg_item" android:gravity="center_vertical"
		android:id="@+id/bottom_bar" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_marginLeft="15dip" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:textColor="@android:color/black"
			android:textSize="15sp"
			android:text="@string/cardinfo_compAddr" />
		<TextView android:textSize="15sp" android:layout_alignParentRight="true" android:textColor="@android:color/black"
			android:id="@+id/my_cardinfo_compAddr" android:layout_width="200dip" android:layout_marginLeft="10dip" android:layout_height="wrap_content"/>
	</LinearLayout>
	

</LinearLayout>